# Copyright 2023-2024 The Milton Hirsch Institute, B.V.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "subnet-garden"
description = "A library for managing IPv4 and IPv6 subnets"
authors = ["The Milton Hirsch Institute, B.V."]
edition = "2021"
keywords = [
    "subnet",
    "cidr",
    "cidr-blocks",
]
license = "Apache-2.0"
documentation = "https://github.com/milton-hirsch-institute/subnet-garden/blob/main/README.md"
homepage = "https://github.com/milton-hirsch-institute/subnet-garden"
repository = "https://github.com/milton-hirsch-institute/subnet-garden"
version = "0.1.0"

[dependencies]
cidr = "^0.2"
cidr-utils = "^0.6"
clap = { version = "^4", features = ["cargo", "derive", "env"], optional = true }
exitcode = { version = "^1", optional = true }
serde = { version="^1", features = ["derive"] }
serde_json = { version = "^1", optional = true }
serde_yaml = { version = "^0.9", optional = true }

[dev-dependencies]
assert_cmd = "^2"
assert_fs = "^1"
grcov = "^0.8"
itertools = "^0.12"
postcard = "^1"
predicates = "^3"
serde_test = "^1"

[features]
default = ["cli"]
cli = ["dep:clap", "dep:exitcode", "dep:serde_json", "dep:serde_yaml"]

[[bin]]
name = "subg"
required-features = ["cli"]
